# stellar

./: CMakeLists.txt  README.md  config.hpp  main.cpp
Starmap/: Starmap.cpp  Starmap.hpp
